# prusti-eval

./: .gitignore  Cargo.toml  CrateList-1.json  CrateList.json  Dockerfile  README.md  cache  err_log.py  eval.py  num_lines.py  panic_log.py  rerun_x.py  run_x.py  rust-toolchain  tempfile-3.1.0.txt  unreachable-1.0.0.txt  viper-toolchain  workspace.py  x.py
eval/: collect.py  crash_log.py  err_log.py  eval.py  from_m.py  num_lines.py  rerun_x.py  run.py  run_x.py  summary.py  workspace.py
example_data/: compare.json  compare_v.json  mir.json  prusti.json  rust.json
examples/: crash.json  mir.json  unsupported_distinct.json
log/config/: prusti
log/graphviz_method_before_foldunfold/: lib.rs.m_-openang-Hasher-space-as-space-std--clone--Clon.dot  lib.rs.m_-openang-Hasher-space-as-space-std--hash--Hashe.dot  lib.rs.m_-openang-State-space-as-space-std--clone--Clone.dot  lib.rs.m_-openang-baseline--State-space-as-space-std--cl.dot  lib.rs.m_-openang-specialized--pclmulqdq--State-space-as.dot  lib.rs.m_Hasher--combine.dot  lib.rs.m_Hasher--finalize.dot  lib.rs.m_Hasher--internal_new_baseline.dot  lib.rs.m_Hasher--internal_new_specialized.dot  lib.rs.m_Hasher--new_with_initial---opencur-closure-shar.dot  lib.rs.m_Hasher--new_with_initial.dot  lib.rs.m_Hasher--reset.dot  lib.rs.m_Hasher--update.dot  lib.rs.m_baseline--State--combine.dot  lib.rs.m_baseline--State--finalize.dot  lib.rs.m_baseline--State--new.dot  lib.rs.m_baseline--State--reset.dot  lib.rs.m_baseline--State--update.dot  lib.rs.m_specialized--pclmulqdq--State--combine.dot  lib.rs.m_specialized--pclmulqdq--State--finalize.dot  lib.rs.m_specialized--pclmulqdq--State--new.dot  lib.rs.m_specialized--pclmulqdq--State--reset.dot  lib.rs.m_specialized--pclmulqdq--State--update.dot  lib.rs.m_specialized--pclmulqdq--calculate.dot  lib.rs.m_specialized--pclmulqdq--reduce128.dot
log/graphviz_method_before_viper/: lib.rs.m_baseline--State--update.dot
log/graphviz_method_optimization_clean_cfg_after/: lib.rs.m_-openang-Hasher-space-as-space-std--clone--Clon.dot  lib.rs.m_-openang-Hasher-space-as-space-std--default--De.dot  lib.rs.m_-openang-Hasher-space-as-space-std--hash--Hashe.dot  lib.rs.m_-openang-State-space-as-space-std--clone--Clone.dot  lib.rs.m_Hasher--new.dot  (+20 more)
mir/: eval.py  mir.py
mir/mir-rust/: Cargo.toml  format.py  test.rs  test.txt
mir/mir-rust/src/: main.rs
prusti/: README.md  crash.py  crates.py  err.py  eval.py  extract.py  fix.py  lines.py  num_lines.py  rerun_x.py  run.py  run_x.py  summary.py  to_csv.py  w.py
python-src/: err_log.py  eval.py  num_lines.py  panic_log.py  rerun_x.py  run_x.py  workspace.py
scripts/: benchmark.py  helper_functions.py  reporting.py  verify_test.py
src/: lib.rs
summary/: compare.json  rust.json
(+2158 files in other folders)
