
[profile.dev]
debug = 1

[profile.test]
debug = 1

[profile.release]
# Enable after fixing https://github.com/viperproject/prusti-dev/issues/383
# lto = true
codegen-units = 1
# Enable when profiling
# debug = true



[package]
name = "prusti-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] } 
log = "0.4.20"
toml = "0.8.6"
glob = "0.3.1"
env_logger = "0.10.1"

